vlib/v/checker/tests/non_matching_functional_args.out
vlib/v/checker/tests/non_matching_functional_args.v:27:2: error: cannot use anonymous function as function type `MyFn` in argument 1 to `sum` 
   25 | 
   26 | fn main() {
   27 |     sum(fn (mut t Table) {
      |     ~~~~~~~~~~~~~~~~~~~~~~
   28 |         t.rename()
   29 |         println(t.name)
vlib/v/checker/tests/non_matching_functional_args.v:31:2: error: cannot use fn `xxx` as function type `MyFn` in argument 1 to `sum` 
   29 |         println(t.name)
   30 |     })
   31 |     sum(xxx)
      |     ~~~~~~~~
   32 |     sum(yyy)
   33 | }
